<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/login_activity_name"
        app:titleTextColor="@color/colorTextDark" />

    <LinearLayout
        android:id="@+id/global_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/login_container_wrapper"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/login_container"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/login_result_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dip"
                    android:gravity="center"
                    android:textColor="@color/colorError"
                    android:visibility="gone" />

                <EditText
                    android:id="@+id/login_field_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/login_field_username_hint"
                    android:importantForAutofill="no"
                    android:inputType="textNoSuggestions|textPersonName"
                    android:minHeight="56dip" />

                <EditText
                    android:id="@+id/login_field_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/login_field_password_hint"
                    android:importantForAutofill="no"
                    android:inputType="textPassword"
                    android:minHeight="56dip" />

                <Button
                    android:id="@+id/login_interactable_submit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dip"
                    android:layout_marginBottom="8dip"
                    android:background="@drawable/button_background_shadow"
                    android:minWidth="96dip"
                    android:text="@string/login_interactable_submit_text"
                    android:textColor="@color/ic_launcher_background"
                    android:textSize="15sp" />

                <Button
                    android:id="@+id/login_interactable_policy_wm"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minWidth="96dip"
                    android:minHeight="40dip"
                    android:text="@string/login_interactable_policy_wm_text"
                    android:textSize="12sp" />

            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>